<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkaqua">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/agussss_round">
        </ImageView>

        <LinearLayout
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/agus"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25dp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/roboto_regular">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/nim"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25dp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/roboto_regular">
            </TextView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="INTEREST"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_regular">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Hobby"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:fontFamily="@font/roboto_regular">
            </TextView>

            <TextView
                android:layout_marginLeft="36dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hobby"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:fontFamily="@font/roboto_regular">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Makes"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:fontFamily="@font/roboto_regular">
            </TextView>

            <TextView
                android:layout_marginLeft="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/makes"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_regular">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Mikes"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:fontFamily="@font/roboto_regular">
            </TextView>

            <TextView
                android:layout_marginLeft="41dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/mikes"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_regular">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Tertarik"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:fontFamily="@font/roboto_regular">
            </TextView>

            <TextView
                android:layout_marginLeft="26dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/interest"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_regular">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Cita-cita"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:fontFamily="@font/roboto_regular">
            </TextView>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:textSize="15dp"
                android:layout_height="wrap_content"
                android:text="@string/cita"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_regular">
            </TextView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>